Added register user feature

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # .env
 DISCORD_TOKEN=ODQyMDE5MDMyOTg2ODEyNDM3.YJvNVQ.s-rMyaZI3meXBM0vTV71aukgHj0
 COMMAND_PREFIX=?
+BACKEND_URL=http://localhost:8080
