Modify Discord Bot Token

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # .env
-DISCORD_TOKEN=ODQyMDE5MDMyOTg2ODEyNDM3.YJvNVQ.s-rMyaZI3meXBM0vTV71aukgHj0
+DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}
 COMMAND_PREFIX=?
