added endpoint for notification

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # .env
 DISCORD_TOKEN=ODQyMDE5MDMyOTg2ODEyNDM3.YJvNVQ.s-rMyaZI3meXBM0vTV71aukgHj0
-COMMAND_PREFIX=?
+COMMAND_PREFIX=!
 BACKEND_URL=https://jadwalin-user-server-oa7pd6bnka-uc.a.run.app
