--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==22.1.0
+chardet==4.0.0
+click==8.1.3
+colorama==0.4.5
 discord.py==1.7.2
-requests==2.28.1
+h11==0.13.0
+idna==3.3
+importlib-metadata==4.12.0
+multidict==6.0.2
 python-dotenv==0.17.1
+typing-extensions==4.3.0
+uvicorn==0.18.3
+yarl==1.8.1
+zipp==3.8.1
